2006-08-21  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.4.1

	* NEWS, configure.ac: Prepare for 0.4.1 release.

	* bash/common/config.bash.in: Fix a bug that caused all scripts to
	fail if we actually found anything in NSSWITCH_CONF, due to a
	misunderstanding on my part of how source works.

2006-08-11  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.4.0

	* NEWS, README: Prepare for 0.4.0 release.

2006-08-11  Mike Kelly  <pioto@pioto.org>

	* bash/db.bash.in, eselect/users.eselect.in: Add a file in DBDIR
	called "userspace". It is populated by db.bash add IFF it doesn't
	exist. Used by the eselect module to determine the proper USERSPACE to
	call {user,group}del.bash with.

2006-08-10  Mike Kelly  <pioto@pioto.org>

	* bash/addgroup.bash.in, bash/adduser.bash.in: Make sure we die if
	no free uid/gid can be found.

	* bash/common/functions.bash.in: Add some more bash voodoo to make die
	actually... die.

	* bash/common/die_TEST.bash.in bash/common/Makefile.am: Add a test for
	die.

2006-08-10  Mike Kelly  <pioto@pioto.org>

	* doc/datafiles.txt, doc/Makefile: Add a document giving the
	specifications of the dynusers data files (the files which tell
	dynusers what uid, etc to use for an added user).

2006-08-10  Mike Kelly  <pioto@pioto.org>

	* bash/auth/files-GNU-glibc-groupmod.bash.in,
	bash/auth/compat-BSD-FreeBSD-userdel.bash.in,
	bash/auth/compat-GNU-glibc-usermod.bash.in,
	bash/auth/compat-BSD-FreeBSD-groupadd.bash.in,
	bash/auth/compat-GNU-glibc-groupdel.bash.in,
	bash/auth/files-GNU-glibc-userdel.bash.in,
	bash/auth/files-GNU-glibc-groupadd.bash.in,
	bash/auth/compat-GNU-glibc-useradd.bash.in,
	bash/auth/compat-BSD-FreeBSD-usermod.bash.in,
	bash/auth/compat-BSD-FreeBSD-groupdel.bash.in,
	bash/auth/compat-GNU-glibc-groupmod.bash.in,
	bash/auth/files-GNU-glibc-usermod.bash.in,
	bash/auth/compat-BSD-FreeBSD-useradd.bash.in,
	bash/auth/files-GNU-glibc-groupdel.bash.in,
	bash/auth/compat-GNU-glibc-userdel.bash.in,
	bash/auth/compat-BSD-FreeBSD-groupmod.bash.in,